--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,5 +1,6 @@
-$primary: #E69D6A;
-$body-bg: #E69D6A;
+$primary: #E39347;
+$secondary: #7C6DA2;
+$body-bg: #E39347;
 $nav-tabs-link-active-color: black;
 
 //Import bootstrap
