--- a/css/styles.css
+++ b/css/styles.css
@@ -3,7 +3,7 @@
     color: white;
     width: 50%;
     height: 40%;
-    margin-left: 25%;
+    margin: 0;
     position: absolute;
     top: 50%;
     -ms-transform: translateY(-50%);
@@ -13,6 +13,7 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    min-width: 480px;
 }
 
 .bigCenterDiv {
@@ -37,8 +38,13 @@
     flex-direction: row;
     justify-content: space-around;
     width: 75%;
-    margin-left: 12.5%;
+    margin: auto;
     padding: 5px;
     background-color: rgba(24, 17, 24, 0.45);
     border: 1px solid white;
+}
+
+.centerHorizontally{
+    display: flex;
+    justify-content: center;
 }
