--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,10 +1,10 @@
-$primary: #E39347;
-$secondary: #7C6DA2;
-$body-bg: #E39347;
+$primary: #EAAC8B;
+$secondary: #6D597A;
+$body-bg: #EAAC8B;
 $nav-tabs-link-active-color: black;
 $accordion-bg: #00000000;
 $accordion-button-bg: rgb(83, 83, 83);
-$accordion-button-active-bg: #7C6DA2;
+$accordion-button-active-bg: #6D597A;
 $accordion-button-padding-x: 1rem;
 $accordion-button-padding-y: 0.5rem;
 $carousel-control-width: 3%;
