updated colors again

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,10 +1,10 @@
-$primary: #EAAC8B;
-$secondary: #6D597A;
-$body-bg: #EAAC8B;
+$primary: #FFAA5E;
+$secondary: #8d697a;
+$body-bg: #FFAA5E;
 $nav-tabs-link-active-color: black;
 $accordion-bg: #00000000;
 $accordion-button-bg: rgb(83, 83, 83);
-$accordion-button-active-bg: #6D597A;
+$accordion-button-active-bg: #544E68;
 $accordion-button-padding-x: 1rem;
 $accordion-button-padding-y: 0.5rem;
 $carousel-control-width: 3%;
